force-app/main/default/objects/Potter_Api__mdt/Potter_Api__mdt.object-meta.xml
<CustomObject>
    <label>Potter Api</label>
    <pluralLabel>Potter Api</pluralLabel>
</CustomObject>