force-app/main/default/objects/Potter_Api__mdt/fields/Character_Routes__c.field-meta.xml
<CustomField>
    <fullName>Character_Routes__c</fullName>
    <label>Character Routes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>