force-app/main/default/objects/Potter_Api__mdt/fields/House_Routes__c.field-meta.xml
<CustomField>
    <fullName>House_Routes__c</fullName>
    <label>House Routes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>