force-app/main/default/objects/Potter_Api__mdt/fields/Sorting_Hat_Route__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Hat_Route__c</fullName>
    <label>Sorting Hat Route</label>
    <length>100</length>
    <type>Text</type>
</CustomField>