force-app/main/default/objects/Potter_Api__mdt/fields/Spell_Routes__c.field-meta.xml
<CustomField>
    <fullName>Spell_Routes__c</fullName>
    <label>Spell Routes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>